single signature submit button, minified status on healthclub front

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -306,7 +306,7 @@ template(name='email_validation_check')
     unless email_verified
         .ui.orange.basic.large.fluid.button.send_verification
             //- i.ban.icon
-            |Email Unvalidated
+            |Click to resend verification email
         if times
             .ui.label
                 |#{times}
