--- a/client/front.jade
+++ b/client/front.jade
@@ -1,18 +1,17 @@
 template(name='healthclub_status')
     .ui.basic.segment
-        .ui.inline.large.header
-            +water_status slug='upper_hot_tub'
+        .ui.header
             |Upper Hot Tub
+        +water_status slug='upper_hot_tub'
         div
-        .ui.inline.large.header
-            +water_status slug='lower_hot_tub'
+        .ui.header
             |Lower Hot Tub
-        //- .ui.grey.inline.large.header
-        //-     |100.2°
+        +water_status slug='lower_hot_tub'
+        //- .ui.grey.header
         div
-        .ui.inline.large.header
-            +water_status slug='pool'
+        .ui.header
             |Pool
+        +water_status slug='pool'
         //- .ui.grey.inline.header
         //-     |80.1°
 
@@ -20,11 +19,11 @@ template(name='healthclub_status')
 template(name='water_status')
     if is_staff
         if on
-            i.green.checkmark.link.icon.toggle_status
+            i.green.checkmark.link.big.icon.toggle_status
         else    
-            i.red.ban.link.icon.toggle_status
+            i.red.ban.link.big.icon.toggle_status
     else
         if on
-            i.green.checkmark.icon
+            i.green.checkmark.big.icon
         else    
-            i.red.ban.icon
+            i.red.ban.big.icon
