--- a/client/styles.css
+++ b/client/styles.css
@@ -11,10 +11,6 @@ body {
     font-size: 4em !important;
 }
 
-.midgard {
-    vertical-align: middle !important;
-}
-
 /* .menu .item {
     font-family: 'Abril Fatface', serif !important;
     font-size: 130% !important;
@@ -137,7 +133,7 @@ input.username_search{
 .button.active {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
     box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important;
-    background-color: #5a4400 !important;
+    background-color: green !important;
     color: white !important;
     /* transform: translate(0, 4px); */
 }
@@ -152,7 +148,7 @@ input.username_search{
 .button:hover {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
     box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important;
-    background-color: rgba(50, 50, 100, 0.1) !important;
+    background-color: green !important;
     /* color: white !important; */
     /* transform: translate(0, 4px); */
 }
