--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -8,9 +8,9 @@ template(name='user_edit')
                         | #{user_from_username_param.first_name} #{user_from_username_param.last_name}
                     //- +i name='pencil'
                     .ui.small.inline.header @#{user_from_username_param.username}
-                    a.ui.large.fluid.icon.basic.button(href="/user/#{user_from_username_param.username}/" title='save') 
-                        //- strong save
+                    a.ui.large.fluid.basic.button(href="/user/#{user_from_username_param.username}/" title='save') 
                         i.checkmark.large.green.icon
+                        strong save
                     .ui.hidden.divider
                     +image_edit key='kiosk_photo' icon='picture' title='profile image' direct=true
                     if is_admin
