--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -74,12 +74,12 @@ template(name='rules_signing')
 
 
 template(name='download_rules_pdf')
-    .ui.header downloading rules pdf...
+    .ui.header Gold Run account verified.  Click below to download copy of Rules and Regulations signing. 
     with downloading_user
         +rules_and_regs_check
     .ui.massive.basic.button.download_rules_pdf
         i.download.icon
-        |download rules pdf    
+        |Download Rules PDF    
 
 
 template(name='add_guest')
