numerous checkin checks logic updates, closing in on scope

--- a/client/client.jade
+++ b/client/client.jade
@@ -47,6 +47,11 @@ template(name='mlayout')
     +yield
 
 
+template(name='verification_confirmation')
+    .ui.text.container
+        h1.ui.header Thank you, you're email has been verified.  You may close the window. 
+
+
 
 template(name='not_found')
     .ui.text.container
