--- a/client/signatures.jade
+++ b/client/signatures.jade
@@ -74,7 +74,7 @@ template(name='rules_signing')
 
 
 template(name='download_rules_pdf')
-    .ui.header Gold Run account verified.  Click below to download copy of Rules and Regulations signing. 
+    .ui.header Gold Run account verified.  Click below to download copy of Rules and Regulations. You may close the window.
     with downloading_user
         +rules_and_regs_check
     .ui.massive.basic.button.download_rules_pdf
