--- a/client/profile/user_edit.jade
+++ b/client/profile/user_edit.jade
@@ -8,7 +8,7 @@ template(name='user_edit')
                         | #{user_from_username_param.first_name} #{user_from_username_param.last_name}
                     //- +i name='pencil'
                     .ui.small.inline.header @#{user_from_username_param.username}
-                    a.ui.large.fluid.basic.button(href="/user/#{user_from_username_param.username}/" title='save') 
+                    a.ui.large.fluid.basic.button(href="/user/#{user_from_username_param.username}/") 
                         i.checkmark.large.green.icon
                         strong save
                     .ui.hidden.divider
