beginning shift checklist list in staff view

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -256,7 +256,7 @@ template(name='remove_button')
         //- |Delete
 
 template(name='add_button')
-    a.ui.large.basic.button.add(title="Add #{model}")
+    a.ui.large.button.add(title="add #{model}")
         i.green.plus.icon
         if label
             |#{label}
