--- a/client/inline.jade
+++ b/client/inline.jade
@@ -33,6 +33,6 @@ template(name='inline_doc')
     else
         if is_staff
             .ui.header no doc found
-            .create_doc.ui.basic.button
+            .create_doc.ui.basic.inline.button
                 i.plus.icon
                 |create #{slug} doc
