--- a/client/staff.jade
+++ b/client/staff.jade
@@ -1,8 +1,8 @@
 template(name='staff')
     .ui.stackable.padded.grid
         .row
-            .sixteen.wide.column
-                h1.ui.grey.large.inline.header 
+            .four.wide.column
+                h1.ui.grey.large.header 
                     //- i.user.shield.icon
                     +i name='manager'
                     |staff
@@ -11,16 +11,19 @@ template(name='staff')
                     //- i.user.add.large.icon
                     +i name='add-user-male' classes='ui inline mini image'
                     strong add resident
-                .ui.inline.header
+                .ui.header
                     |#{checkedin_members.count} checked in members
-                +inline_doc slug='staff_notices' classes='ui small grey header'
+                //- +inline_doc slug='staff_notices' classes='ui small grey header'
                 //- +add_button model='work_order' label='work order'
                 //- +add_button model='communication' label='communication'
-                //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
-                //- +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
+                +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
+                +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
                 //- +unit_key_widget
-        .row
-            .sixteen.wide.column
+                .ui.header your shift checklists
+                each shift_checklists
+                    a.ui.small.grey.header(href="/m/frontdesk_hourly_checklist/#{_id}/view") #{when}
+                    div
+            .twelve.wide.column
                 .ui.styled.fluid.large.accordion
                     .active.title
                         i.users.icon
