--- a/client/home.jade
+++ b/client/home.jade
@@ -9,8 +9,8 @@ template(name='home')
                 a(href="/m/#{slug}")
                     .ui.segment.home_segment.set_model
                         .ui.grey.header 
-                            i.icon(class=icon)
-                            //- +i name=icon
+                            //- i.icon(class=icon)
+                            +i name=icon
                             |#{title}
 
 
