--- a/components/accounts/login.jade
+++ b/components/accounts/login.jade
@@ -40,7 +40,7 @@ template(name='login')
                         //- +i name='forgot-password' classes='ui mini inline image'                    
                         i.refresh.icon
                         |forgot password
-                    a.ui.large.basic.button(href='/register') 
-                        //- +i name='add-user-male' classes='ui mini inline image'                    
-                        i.user.plus.icon
-                        |register
+                    //- a.ui.large.basic.button(href='/register') 
+                    //-     //- +i name='add-user-male' classes='ui mini inline image'                    
+                    //-     i.user.plus.icon
+                    //-     |register
