--- a/client/profile.jade
+++ b/client/profile.jade
@@ -16,6 +16,8 @@ template(name='user_layout')
                                 | #{user.last_name}
                     .ui.center.aligned.small.grey.header
                         | @#{user.username}        
+                    if user_is_resident
+                        +resident_info         
                     if is_staff
                         a.ui.fluid.basic.button.item(href="/user/#{user_from_username_param.username}/edit")
                             i.pencil.large.blue.icon
@@ -57,8 +59,6 @@ template(name='user_layout')
                                 |roles
                             each roles
                                 .ui.basic.label #{this}
-                    if user_is_resident
-                        +resident_info         
                 .twelve.wide.column.shadowed-box
                     +yield
     unless is_frontdesk
@@ -77,9 +77,15 @@ template(name='user_check_steps')
                 //- +i name=icon classes='ui avatar image'
                 |#{title}
     if checkins_without_gov_id
-        .ui.header #{checkins_left_without_gov_id} check in's left without government ID
+        if is_staff
+            .ui.tiny.header #{checkins_left_without_gov_id} check in's left without government ID
+        else
+            .ui.header #{checkins_left_without_gov_id} check in's left without government ID
     if checkins_without_email_verification
-        .ui.header #{checkins_left_without_email_verification} check in's left without email verification
+        if is_staff
+            .ui.tiny.header #{checkins_left_without_email_verification} check in's left without email verification
+        else
+            .ui.header #{checkins_left_without_email_verification} check in's left without email verification
         +email_validation_check
         //- .item
         //-     if completed
@@ -134,6 +140,8 @@ template(name='staff_verification')
 
 
 template(name='user_residency')
+    +resident_info         
+
     +user_key
     +user_unit
     .ui.segment
@@ -186,8 +194,8 @@ template(name='user_about')
                         +user_guests
                     .four.wide.column
                         +user_violations
-                    .four.wide.column
-                        +user_signatures
+                    //- .four.wide.column
+                    //-     +user_signatures
                     .four.wide.column
                         +user_notes        
                     .four.wide.column
@@ -448,4 +456,5 @@ template(name='membership_status')
         else if user_is_resident
             +date_view key='expiration_date' label='expiration date' direct=true
             +pdf_view key='lease_agreement' label='lease agreement' direct=true
+            div
             +pdf_view key='lease_addendum' label='lease addendum' direct=true
