--- a/client/staff.jade
+++ b/client/staff.jade
@@ -2,10 +2,10 @@ template(name='staff')
     .ui.stackable.padded.grid
         .row
             .four.wide.column
-                h1.ui.grey.large.header 
+                .ui.grey.large.header 
                     //- i.user.shield.icon
-                    +i name='manager'
-                    |staff
+                    +i name='user-shield'
+                    |Staff
                 //- i.massive.loading.brown.poo.icon
                 a.ui.big.compact.basic.button(href='/add_resident')
                     //- i.user.add.large.icon
@@ -16,13 +16,18 @@ template(name='staff')
                 //- +inline_doc slug='staff_notices' classes='ui small grey header'
                 //- +add_button model='work_order' label='work order'
                 //- +add_button model='communication' label='communication'
-                +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
-                +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
+                .ui.large.fluid.button.log_staff_walked
+                    |Log Hourly Shift Walk
+                //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
+                //- +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
                 //- +unit_key_widget
-                .ui.header your shift checklists
-                each shift_checklists
-                    a.ui.small.grey.header(href="/m/frontdesk_hourly_checklist/#{_id}/view") #{when}
-                    div
+                .ui.header your shift walks
+                each shift_walks
+                    .ui.small.header #{when}
+                        i.remove.link.icon.remove_walk
+                a.ui.fluid.large.button(href='/shift_checklist')
+                    i.tasks.icon
+                    |Checklist
             .twelve.wide.column
                 .ui.styled.fluid.large.accordion
                     .active.title
@@ -79,8 +84,8 @@ template(name='hc_session')
                     .item
                         i.home.icon
                         | #{unit_number}
-                +number_edit key='checkins_without_gov_id' label='alter checkins without gov id' direct=true
-                +number_edit key='checkins_without_email_verification' label='alter checkins without email verification' direct=true
+                //- +number_edit key='checkins_without_gov_id' label='alter checkins without gov id' direct=true
+                //- +number_edit key='checkins_without_email_verification' label='alter checkins without email verification' direct=true
                 //- +number_view key='unit_number' label='unit #' direct=true
                 //- +text_view key='building_code' label='building code' direct=true
                 +lease_expiration_check
@@ -352,3 +357,24 @@ template(name='request_row')
                 .ui.label(title='unavailable') #{this}
             if can_edit
                 +remove_button
+
+
+
+
+
+template(name='shift_checklist')
+    .ui.stackable.padded.grid
+        .row
+            .ui.four.wide.column
+                .ui.header 
+                    +i name='tasks'
+                    |Staff Checklist for #{today}
+            .ui.twelve.wide.column
+                if todays_checklist
+                    with todays_checklist
+                        each checklist_items
+                            .ui.segment
+                                |#{title}
+                else
+                    .ui.large.button.create_checklist
+                        |create checklist
