--- a/client/staff.jade
+++ b/client/staff.jade
@@ -7,7 +7,7 @@ template(name='staff')
                     +i name='user-shield'
                     |Staff
                 //- i.massive.loading.brown.poo.icon
-                a.ui.big.compact.basic.button(href='/add_resident')
+                a.ui.large.fluid.basic.button(href='/add_resident')
                     //- i.user.add.large.icon
                     +i name='add-user-male' classes='ui inline mini image'
                     strong add resident
@@ -17,7 +17,7 @@ template(name='staff')
                 //- +add_button model='work_order' label='work order'
                 //- +add_button model='communication' label='communication'
                 .ui.large.fluid.button.log_staff_walked
-                    |Log Hourly Shift Walk
+                    |log hourly shift walk
                 //- +add_button model='frontdesk_hourly_checklist' label='hourly checklist'
                 //- +add_button model='front_desk_opening_closing_checklist' label='opening/closing checklist'
                 //- +unit_key_widget
@@ -27,7 +27,7 @@ template(name='staff')
                         i.remove.link.icon.remove_walk
                 a.ui.fluid.large.button(href='/shift_checklist')
                     i.tasks.icon
-                    |Checklist
+                    |checklist
             .twelve.wide.column
                 .ui.styled.fluid.large.accordion
                     .active.title
@@ -368,13 +368,27 @@ template(name='shift_checklist')
             .ui.four.wide.column
                 .ui.header 
                     +i name='tasks'
-                    |Staff Checklist for #{today}
+                    |staff checklist for #{today}
             .ui.twelve.wide.column
                 if todays_checklist
                     with todays_checklist
                         each checklist_items
-                            .ui.segment
-                                |#{title}
+                            .ui.segment.stackable.grid
+                                .eight.wide.column
+                                    |#{title}
+                                .eight.wide.column
+                                    unless completed
+                                        .ui.big.fluid.button.complete mark complete
+                                    else
+                                        .ui.big.fluid.green.fade.animated.button.incomplete
+                                            .visible.content
+                                                |complete
+                                            .hidden.content
+                                                |mark incomplete
+                                        .ui.tiny.header {{long_date completed_time}}
+                        .ui.fluid.large.button.submit
+                            i.checkmark.icon
+                            |submit
                 else
                     .ui.large.button.create_checklist
                         |create checklist
