--- a/client/styles.css
+++ b/client/styles.css
@@ -3,7 +3,7 @@ body {
     font-size: 110% !important;
     /*line-height: 200% !important;*/
     /*background: #3d3d3d !important;*/
-    background: rgba(0, 0, 0, .05) !important
+    background: rgba(0, 0, 0, .08) !important
     /* background: #0e0e44 !important; */
 }
 
@@ -160,7 +160,7 @@ input.username_search{
 .button.active {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
     box-shadow: 0 1px 1px 1px rgba(50, 50, 100, 0.1) !important;
-    background-color: green !important;
+    background-color: rgba(71, 55, 0, .8) !important;
     color: white !important;
     /* transform: translate(0, 4px); */
 }
@@ -175,7 +175,7 @@ input.username_search{
 .button:hover {
     /* background-color: rgba(200, 200, 200, 0.5) !important; */
     box-shadow: 0 2px 2px 2px rgba(50, 50, 100, 0.1) !important;
-    background-color: green !important;
+    background-color: rgba(71, 55, 0, .5) !important;
     /* color: white !important; */
     /* transform: translate(0, 4px); */
 }
